# assigments

./: README.md
.github/workflows/: pages.yml
AndroidProgrammingQuiz-CrossPlatformCI/Scene/: Platform.h  Square.h  main.cpp
AndroidProgrammingQuiz-CrossPlatformCI/android/app/src/main/cpp/: SceneSquare.cpp
Assignment-2-3DFan/: .gitignore  CMakeLists.txt  README.md  build_web.bat  build_web.sh  script_build_and_run.bat
Assignment-2-3DFan/.github/workflows/: android.yaml  desktop.yaml  pages.yaml
Assignment-2-3DFan/Scene/: Fan.cpp  Fan.h  Renderer.cpp
Assignment-2-3DFan/android/: settings.gradle
Assignment-2-3DFan/android/app/: build.gradle
Assignment-2-3DFan/android/app/src/main/assets/shader/: FanFragment.glsl  FanVertex.glsl
Assignment-2-3DFan/android/app/src/main/cpp/: CMakeLists.txt  NativeTemplate.cpp
Assignment-2-3DFan/android/app/src/main/java/com/example/fan3d/: MainActivity.java
Assignment-2-3DFan/android/app/src/main/res/values/: strings.xml
Assignment-2-3DFan/iOS/: AppDelegate.mm  GLView.h  GLView.mm  Info.plist  LaunchScreen.storyboard  ViewController.h  ViewController.mm  main.mm
Assignment-2-3DFan/iOS/TouchEvents.xcodeproj/: project.pbxproj
Assignment1/: CMakeLists.txt  README.md  build_web.bat  build_web.sh  script_build_and_run.bat
Assignment1/Scene/: Model.h  Renderer.cpp  Renderer.h  ShaderHelper.h  Square.cpp  Triangle.cpp  Triangle.h
Assignment1/android/app/src/main/assets/shader/: YellowSquareFragment.glsl  YellowSquareVertex.glsl
Assignment1/android/app/src/main/cpp/: CMakeLists.txt  NativeTemplate.cpp  SceneRenderer.cpp  SceneTriangle.cpp
Assignment1/android/app/src/main/java/com/example/helloworldandroid/: MainActivity.java
Assignment1/cmake/: ImportDependencies.cmake
Chapter2/2-OpenGLES3_Primitives-Modern/Scene/: Platform.h
